M2-ISA-R/m2isar/frontends/coredsl2/parser_gen/CoreDSL2Parser.py
# Generated from CoreDSL2.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CoreDSL2Parser ( Parser ):

    grammarFileName = "CoreDSL2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'InstructionSet'", "'extends'", 
                     "','", "'{'", "'}'", "'Core'", "'provides'", "'architectural_state'", 
                     "';'", "'functions'", "'instructions'", "'encoding'", 
                     "':'", "'::'", "'assembly'", "'behavior'", "'extern'", 
                     "'('", "')'", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'switch'", "'return'", "'break'", "'continue'", 
                     "'spawn'", "'case'", "'default'", "'*'", "'&'", "'<'", 
                     "'>'", "'bool'", "'void'", "'enum'", "'unsigned'", 
                     "'signed'", "'char'", "'short'", "'int'", "'long'", 
                     "'float'", "'double'", "'[['", "'='", "']]'", "'.'", 
                     "'->'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", 
                     "'/'", "'%'", "'<<'", "'>>'", "'<='", "'>='", "'=='", 
                     "'!='", "'^'", "'|'", "'&&'", "'||'", "'?'", "'+='", 
                     "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'>>='", 
                     "'>>>='", "'<<='", "'%='", "'alias'", "'const'", "'volatile'", 
                     "'static'", "'register'", "'struct'", "'union'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LEFT_BR", "RIGHT_BR", "BOOLEAN", 
                      "FLOAT", "INTEGER", "IDENTIFIER", "CHARCONST", "ENCSTRINGCONST", 
                      "STRING", "ML_COMMENT", "SL_COMMENT", "WS" ]

    RULE_description_content = 0
    RULE_import_file = 1
    RULE_isa = 2
    RULE_section = 3
    RULE_instruction = 4
    RULE_rule_encoding = 5
    RULE_encoding_entry = 6
    RULE_function_definition = 7
    RULE_parameter_list = 8
    RULE_parameter_declaration = 9
    RULE_statement = 10
    RULE_switch_block_statement_group = 11
    RULE_switch_label = 12
    RULE_block = 13
    RULE_block_item = 14
    RULE_for_condition = 15
    RULE_declaration = 16
    RULE_type_specifier = 17
    RULE_value_type_specifier = 18
    RULE_integer_signedness = 19
    RULE_integer_shorthand = 20
    RULE_float_shorthand = 21
    RULE_attribute = 22
    RULE_bit_size_specifier = 23
    RULE_enumerator_list = 24
    RULE_enumerator = 25
    RULE_struct_declaration = 26
    RULE_struct_declaration_specifier = 27
    RULE_declarator = 28
    RULE_initializer = 29
    RULE_initializerList = 30
    RULE_designated_initializer = 31
    RULE_designator = 32
    RULE_expression = 33
    RULE_primary = 34
    RULE_string_literal = 35
    RULE_constant = 36
    RULE_integer_constant = 37
    RULE_floating_constant = 38
    RULE_bool_constant = 39
    RULE_character_constant = 40
    RULE_double_left_bracket = 41
    RULE_double_right_bracket = 42
    RULE_data_types = 43
    RULE_type_qualifier = 44
    RULE_storage_class_specifier = 45
    RULE_struct_or_union = 46

    ruleNames =  [ "description_content", "import_file", "isa", "section", 
                   "instruction", "rule_encoding", "encoding_entry", "function_definition", 
                   "parameter_list", "parameter_declaration", "statement", 
                   "switch_block_statement_group", "switch_label", "block", 
                   "block_item", "for_condition", "declaration", "type_specifier", 
                   "value_type_specifier", "integer_signedness", "integer_shorthand", 
                   "float_shorthand", "attribute", "bit_size_specifier", 
                   "enumerator_list", "enumerator", "struct_declaration", 
                   "struct_declaration_specifier", "declarator", "initializer", 
                   "initializerList", "designated_initializer", "designator", 
                   "expression", "primary", "string_literal", "constant", 
                   "integer_constant", "floating_constant", "bool_constant", 
                   "character_constant", "double_left_bracket", "double_right_bracket", 
                   "data_types", "type_qualifier", "storage_class_specifier", 
                   "struct_or_union" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    LEFT_BR=90
    RIGHT_BR=91
    BOOLEAN=92
    FLOAT=93
    INTEGER=94
    IDENTIFIER=95
    CHARCONST=96
    ENCSTRINGCONST=97
    STRING=98
    ML_COMMENT=99
    SL_COMMENT=100
    WS=101

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Description_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._import_file = None # Import_fileContext
            self.imports = list() # of Import_fileContexts
            self._isa = None # IsaContext
            self.definitions = list() # of IsaContexts

        def import_file(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.Import_fileContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.Import_fileContext,i)


        def isa(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.IsaContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.IsaContext,i)


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_description_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription_content" ):
                listener.enterDescription_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription_content" ):
                listener.exitDescription_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescription_content" ):
                return visitor.visitDescription_content(self)
            else:
                return visitor.visitChildren(self)




    def description_content(self):

        localctx = CoreDSL2Parser.Description_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_description_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 94
                localctx._import_file = self.import_file()
                localctx.imports.append(localctx._import_file)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                localctx._isa = self.isa()
                localctx.definitions.append(localctx._isa)
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2 or _la==7):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.uri = None # Token

        def STRING(self):
            return self.getToken(CoreDSL2Parser.STRING, 0)

        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_import_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_file" ):
                listener.enterImport_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_file" ):
                listener.exitImport_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_file" ):
                return visitor.visitImport_file(self)
            else:
                return visitor.visitChildren(self)




    def import_file(self):

        localctx = CoreDSL2Parser.Import_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CoreDSL2Parser.T__0)
            self.state = 106
            localctx.uri = self.match(CoreDSL2Parser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IsaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_isa

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Instruction_setContext(IsaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.IsaContext
            super().__init__(parser)
            self.name = None # Token
            self._IDENTIFIER = None # Token
            self.extension = list() # of Tokens
            self._section = None # SectionContext
            self.sections = list() # of SectionContexts
            self.copyFrom(ctx)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CoreDSL2Parser.IDENTIFIER)
            else:
                return self.getToken(CoreDSL2Parser.IDENTIFIER, i)
        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.SectionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.SectionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction_set" ):
                listener.enterInstruction_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction_set" ):
                listener.exitInstruction_set(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction_set" ):
                return visitor.visitInstruction_set(self)
            else:
                return visitor.visitChildren(self)


    class Core_defContext(IsaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.IsaContext
            super().__init__(parser)
            self.name = None # Token
            self._IDENTIFIER = None # Token
            self.contributing_types = list() # of Tokens
            self._section = None # SectionContext
            self.sections = list() # of SectionContexts
            self.copyFrom(ctx)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CoreDSL2Parser.IDENTIFIER)
            else:
                return self.getToken(CoreDSL2Parser.IDENTIFIER, i)
        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.SectionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.SectionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCore_def" ):
                listener.enterCore_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCore_def" ):
                listener.exitCore_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCore_def" ):
                return visitor.visitCore_def(self)
            else:
                return visitor.visitChildren(self)



    def isa(self):

        localctx = CoreDSL2Parser.IsaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_isa)
        self._la = 0 # Token type
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = CoreDSL2Parser.Instruction_setContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(CoreDSL2Parser.T__1)
                self.state = 109
                localctx.name = self.match(CoreDSL2Parser.IDENTIFIER)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 110
                    self.match(CoreDSL2Parser.T__2)
                    self.state = 111
                    localctx._IDENTIFIER = self.match(CoreDSL2Parser.IDENTIFIER)
                    localctx.extension.append(localctx._IDENTIFIER)
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==4:
                        self.state = 112
                        self.match(CoreDSL2Parser.T__3)
                        self.state = 113
                        localctx._IDENTIFIER = self.match(CoreDSL2Parser.IDENTIFIER)
                        localctx.extension.append(localctx._IDENTIFIER)
                        self.state = 118
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 121
                self.match(CoreDSL2Parser.T__4)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 6656) != 0:
                    self.state = 122
                    localctx._section = self.section()
                    localctx.sections.append(localctx._section)
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(CoreDSL2Parser.T__5)
                pass
            elif token in [7]:
                localctx = CoreDSL2Parser.Core_defContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(CoreDSL2Parser.T__6)
                self.state = 130
                localctx.name = self.match(CoreDSL2Parser.IDENTIFIER)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 131
                    self.match(CoreDSL2Parser.T__7)
                    self.state = 132
                    localctx._IDENTIFIER = self.match(CoreDSL2Parser.IDENTIFIER)
                    localctx.contributing_types.append(localctx._IDENTIFIER)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==4:
                        self.state = 133
                        self.match(CoreDSL2Parser.T__3)
                        self.state = 134
                        localctx._IDENTIFIER = self.match(CoreDSL2Parser.IDENTIFIER)
                        localctx.contributing_types.append(localctx._IDENTIFIER)
                        self.state = 139
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 142
                self.match(CoreDSL2Parser.T__4)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 6656) != 0:
                    self.state = 143
                    localctx._section = self.section()
                    localctx.sections.append(localctx._section)
                    self.state = 148
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 149
                self.match(CoreDSL2Parser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoreDSL2Parser.RULE_section

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Section_instructionsContext(SectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.SectionContext
            super().__init__(parser)
            self.type_ = None # Token
            self._attribute = None # AttributeContext
            self.attributes = list() # of AttributeContexts
            self._instruction = None # InstructionContext
            self.instructions = list() # of InstructionContexts
            self.copyFrom(ctx)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.AttributeContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.AttributeContext,i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.InstructionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.InstructionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_instructions" ):
                listener.enterSection_instructions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_instructions" ):
                listener.exitSection_instructions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection_instructions" ):
                return visitor.visitSection_instructions(self)
            else:
                return visitor.visitChildren(self)


    class Section_functionsContext(SectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.SectionContext
            super().__init__(parser)
            self.type_ = None # Token
            self._function_definition = None # Function_definitionContext
            self.functions = list() # of Function_definitionContexts
            self.copyFrom(ctx)

        def function_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.Function_definitionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.Function_definitionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_functions" ):
                listener.enterSection_functions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_functions" ):
                listener.exitSection_functions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection_functions" ):
                return visitor.visitSection_functions(self)
            else:
                return visitor.visitChildren(self)


    class Section_arch_stateContext(SectionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoreDSL2Parser.SectionContext
            super().__init__(parser)
            self.type_ = None # Token
            self._declaration = None # DeclarationContext
            self.declarations = list() # of DeclarationContexts
            self._expression = None # ExpressionContext
            self.expressions = list() # of ExpressionContexts
            self.copyFrom(ctx)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.DeclarationContext,i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoreDSL2Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CoreDSL2Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection_arch_state" ):
                listener.enterSection_arch_state(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection_arch_state" ):
                listener.exitSection_arch_state(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection_arch_state" ):
                return visitor.visitSection_arch_state(self)
            else:
                return visitor.visitChildren(self)



    def section(self):
